fix(combobox): clear button overlaps the selected item (#395)
* fix(combobox): clear button overlaps the selected item

Closes telerik/kendo-theme-default#261

* refactor(combobox): rearrange styles

--- a/packages/default/scss/combobox/_layout.scss
+++ b/packages/default/scss/combobox/_layout.scss
@@ -7,6 +7,10 @@
                 transform: translateY(-50%);
                 margin-right: $padding-x;
             }
+
+            > .k-i-close {
+                right: calc(#{$icon-size} + #{$padding-y-lg * 3});
+            }
         }
 
         .k-input {}
@@ -33,11 +37,16 @@
                 padding: $button-padding-y-sm;
             }
         }
+    }
 
-        > .k-dropdown-wrap {
-            > .k-i-close {
-                right: calc(#{$icon-size} + #{$padding-y-lg * 3});
-            }
+    .k-combobox-clearable {
+        .k-input {
+            padding-right: $icon-size + $padding-x;
+        }
+
+        &[dir='rtl'] .k-input {
+            padding-left: $icon-size + $padding-x;
+            padding-right: $input-padding-x;
         }
     }
 }
